--- a/estudantes/templates/estudantes/informacoes_adicionais.html
+++ b/estudantes/templates/estudantes/informacoes_adicionais.html
@@ -66,16 +66,14 @@
     <label for="linkedin">Caso desejar, você pode informar seu LinkedIn: (opcional)</label><br>
     <input type="text" size="80" id="linkedin" name="linkedin" {% if estudante.user.linkedin %}value="{{estudante.user.linkedin}}"{% endif %} placeholder="https://www.linkedin.com/" {% if vencido %}disabled{% endif %}><br>
     
-    {% comment %}
     <br>
     <label for="celular">
       Caso desejar, você pode informar seu telefone celular: (opcional)<br>
       Iramos usar esse número para enviar avisos de forma não oficial pelo WhatsApp.<br>
-      <b class="text-danger">A comunicação oficial é pelo Blackboard e/ou seu e-mail de estudante!</b>
+      <b class="text-danger">A comunicação oficial é pelo seu e-mail de estudante!</b>
     </label><br>
     <input type="text" size="20" maxlength="20" id="celular" name="celular" {% if estudante.user.celular %}value="{{estudante.user.celular}}"{% endif %} placeholder="(XX)XXXX-XXXX" {% if vencido %}disabled{% endif %}>
-    {% endcomment %}
-
+   
     <br><br>
     <input class="btn btn-primary mb-1" {% if vencido %}disabled{% endif %} type="submit" value="Atualizar">
 
