--- a/organizacoes/templates/organizacoes/anotacao_view.html
+++ b/organizacoes/templates/organizacoes/anotacao_view.html
@@ -32,15 +32,21 @@
     <label for="texto">Anotação:</label><br>
     <textarea id="texto" name="texto" class="form-control" rows="5" required>{% if anotacao %}{{anotacao.texto}}{% endif %}</textarea>
     <br>
-    <label for="tipo_de_retorno">Posição do contato:</label>
+
+    <label for="tipo_de_retorno">Tipo de contato:</label>
     <select id="tipo_de_retorno" name="tipo_de_retorno" class="form-control" required>
       {% if not anotacao %}
         <option disabled selected value> -- selecione tipo de contato -- </option>
       {% endif %}
       {% for retorno in TIPO_DE_RETORNO %}
+        {% ifchanged retorno.2 %}{% if not forloop.first %}</optgroup>{% endif %}<optgroup label="{{retorno.2}}">{% endifchanged %}
         <option value="{{retorno.0}}" {% if anotacao and anotacao.tipo_de_retorno == retorno.0 %}selected{% endif %} >{{retorno.1}}</option>
       {% endfor %}
-    </select>
+      {% if TIPO_DE_RETORNO %}
+        </optgroup>
+      {% endif %}
+    </select> 
+ 
     <input type="submit" style="display:none;"/>
   </div>
   <div class="modal-footer">
