--- a/administracao/templates/administracao/cadastra_organizacao.html
+++ b/administracao/templates/administracao/cadastra_organizacao.html
@@ -67,8 +67,8 @@
     <label for="logo">Logotipo da organização:</label>
     <input id="logo" type="file" name="logo" accept="image/*">
     {% if organizacao and organizacao.logotipo %}
-      <br><a href="http://{{request.get_host}}{{organizacao.logotipo.url}}">
-        <span class="full-text">http://{{request.get_host}}{{organizacao.logotipo.url}}</span>
+      <br><a href="{{request.scheme}}://{{request.get_host}}{{organizacao.logotipo.url}}">
+        <span class="full-text">{{request.scheme}}://{{request.get_host}}{{organizacao.logotipo.url}}</span>
       </a>
     {% endif %}
     
