--- a/documentos/templates/documentos/tabela_atas.html
+++ b/documentos/templates/documentos/tabela_atas.html
@@ -33,7 +33,7 @@
               {% ifchanged %}<td style="vertical-align:middle" rowspan="{{ group.list|length }}">{{obj.data|date:"DATE_FORMAT"}}</td>{% endifchanged %}
               <td style="text-align:center; padding: 2px; border-top-style: dotted;{% if not forloop.last %}border-bottom-style: dotted;{% endif %}">
                 <a class="btn btn-light btn-outline-info btn-sm tab_botao"
-                   href="http://{{request.get_host}}{{obj.get_url}}" 
+                   href="{{request.scheme}}://{{request.get_host}}{{obj.get_url}}" 
                    target="_blank" rel="noopener noreferrer"
                    {% if obj.anotacao %}
                     data-toggle="tooltip" data-html="true" animation="true" title="anotação: {{obj.anotacao}}"
