--- a/documentos/templates/documentos/tabela_documentos.html
+++ b/documentos/templates/documentos/tabela_documentos.html
@@ -172,7 +172,7 @@
                     {% if documento.documento and documento.link %}
                       <li>
                         {{documento.tipo_documento}}
-                        <a href="http://{{request.get_host}}{{documento.get_url}}" target="_blank" rel="noopener noreferrer">(documento)</a>
+                        <a href="{{request.scheme}}://{{request.get_host}}{{documento.get_url}}" target="_blank" rel="noopener noreferrer">(documento)</a>
                         <a href="{{documento.link}}" target="_blank" rel="noopener noreferrer">(link)</a>
                         {% if documento.lingua_do_documento == 1 %} {% comment %} Inglês {% endcomment %}
                           <sup>(Inglês)</sup>
@@ -181,7 +181,7 @@
                     {% else %}
                       {% if documento.documento %}
                         <li>
-                          <a href="http://{{request.get_host}}{{documento.get_url}}" target="_blank" rel="noopener noreferrer">{{documento.tipo_documento}}</a>
+                          <a href="{{request.scheme}}://{{request.get_host}}{{documento.get_url}}" target="_blank" rel="noopener noreferrer">{{documento.tipo_documento}}</a>
                           {% if documento.lingua_do_documento == 1 %} {% comment %} Inglês {% endcomment %}
                             <sup>(Inglês)</sup>
                           {% endif %}
