--- a/estudantes/templates/estudantes/alinhamentos_gerais.html
+++ b/estudantes/templates/estudantes/alinhamentos_gerais.html
@@ -17,7 +17,7 @@
 
 <h5>&bull;&nbsp;<a href="https://forms.gle/3Qong25KnCYX9QWs9">Levantamento de Expectativa do PFE</a></h5><br>
 
-<h5>&bull;&nbsp;<a href="http://{{request.get_host}}{{documento.get_url}}">Alocação Semanal</a></h5><br>
+<h5>&bull;&nbsp;<a href="{{request.scheme}}://{{request.get_host}}{{documento.get_url}}">Alocação Semanal</a></h5><br>
 
 
 
