--- a/professores/templates/professores/bancas_lista.html
+++ b/professores/templates/professores/bancas_lista.html
@@ -232,7 +232,7 @@
             <div class="avaliacao" style="margin-top: 8px; overflow-wrap: break-word;">
               &#9733; <b>Link formulário de avaliação</b>: 
               <a href="{% url 'banca_avaliar' banca.slug %}">
-                http://{{ request.get_host }}{% url 'banca_avaliar' banca.slug %}
+                {{request.scheme}}://{{ request.get_host }}{% url 'banca_avaliar' banca.slug %}
               </a>
             </div>
 
