não mostrando NAN se não há projetos

--- a/professores/templates/professores/planos_de_orientacao_todos.html
+++ b/professores/templates/professores/planos_de_orientacao_todos.html
@@ -122,8 +122,10 @@
     <script>
       tsubmetidos = Object.keys(submetidos).length;
       tausentes = Object.keys(ausentes).length
-      $("#submetidos").html(tsubmetidos.toString()+" ("+(100*(tsubmetidos/(tsubmetidos+tausentes))).toFixed(2)+"%)");
-      $("#ausentes").html(tausentes.toString()+" ("+(100*(tausentes/(tsubmetidos+tausentes))).toFixed(2)+"%)");
+      if (tsubmetidos+tausentes > 0) {
+        $("#submetidos").html(tsubmetidos.toString()+" ("+(100*(tsubmetidos/(tsubmetidos+tausentes))).toFixed(2)+"%)");
+        $("#ausentes").html(tausentes.toString()+" ("+(100*(tausentes/(tsubmetidos+tausentes))).toFixed(2)+"%)");
+      }
     </script>
     
     <script>
