deixando texto alinhado

--- a/calendario/templates/calendario/calendario.html
+++ b/calendario/templates/calendario/calendario.html
@@ -276,8 +276,8 @@
           {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
             <span class="tit_agenda" id="titulo_operacao" data-toggle="tooltip" data-html="true" animation="true" title=
             "O semestre da coordenação vai de Fevereiro* à Julho e de Agosto* a Janeiro">
-              Operação
-            </span><br>
+              Operação<br>
+            </span>
 
             <div id="lista_operacao" class="lista_operacao quad_pfe">
               {% if coordenacao %}
@@ -1130,7 +1130,6 @@
           $('*[data-month-id="6"]').prevAll().remove();
         }
       }
-
 
 
       // Para reduzir o local a só uma linha
