posibilidade de arastar bancas agora

--- a/professores/templates/professores/dinamicas_index.html
+++ b/professores/templates/professores/dinamicas_index.html
@@ -105,6 +105,9 @@
           abrir_modal.call(elem, null);
         },
 
+
+        // PEGAR OS OUTROS EVENTOS DA BANCAS_INDEX
+
       });
 
       calendar.render();
