--- a/administracao/templates/administracao/bloqueados.html
+++ b/administracao/templates/administracao/bloqueados.html
@@ -90,6 +90,7 @@
   </div>
   <br>
 
+  Últimos 30 dias de conexões.
   {% comment %} <strong>Total de Conexões Válidas:</strong> {{ usuarios|length }}<br> {% endcomment %}
 
   <br><br>
