--- a/calendario/templates/calendario/evento-modal.html
+++ b/calendario/templates/calendario/evento-modal.html
@@ -8,24 +8,27 @@
 {% load static %}
 {% load get_field %}
 
-<div class="modal fade" id="event-modal">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      
-      <div class="modal-header">
-        <h5 class="modal-title">Evento</h5>
-        {% if user.tipo_de_usuario != 4 %}
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <span id="permissao" style="color:red; text-decoration: underline solid red">Alterações Restritas ao Administrador</span>
-        {% endif %}
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div> {% comment %} modal-header {% endcomment %}
+<form id="meuForm" class="form-horizontal" method="post" enctype="multipart/form-data">
 
-      <div class="modal-body">
-        <input type="hidden" name="event-index">
-        <form class="form-horizontal">
+  {% csrf_token %}
+
+  <div class="modal fade" id="event-modal">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        
+        <div class="modal-header">
+          <h5 class="modal-title">Evento</h5>
+          {% if user.tipo_de_usuario != 4 %}
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <span id="permissao" style="color:red; text-decoration: underline solid red">Alterações Restritas ao Administrador</span>
+          {% endif %}
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div> {% comment %} modal-header {% endcomment %}
+
+        <div class="modal-body">
+          <input type="hidden" name="event-index">
             <div class="form-group row">
               <label for="event-type" class="col-sm-4 control-label">Tipo</label>
               <div class="col-sm-8">
@@ -85,17 +88,30 @@
             </div>
 
             <div class="form-group row">
-              <label for="event-material" class="col-sm-4 control-label">Material (arquivos)</label>
+              <label for="event-material" class="col-sm-4 control-label">Material (arquivo)</label>
               <div class="col-sm-8">
                 <select name="event-material" id="event-material" class="form-control" title="Selecione material anexo">
                   <option value id="nenhum"> -------- </option>
                   {% for documento in documentos %}
-                    <option value="{{documento.id}}">{{documento.anotacao}}</option>
+                    <option value="{{documento.id}}">{{documento.filename}} [{{documento.data|date:"d/m/y"}}] </option>
                   {% endfor %}
                 </select>
+                <input required id="arquivo" type="file" name="arquivo" class="form-control" style="border: 0px; padding-left: 0px;"
+                      accept="text/plain, application/pdf, application/msword, application/vnd.openxmlformats-officedocument.wordprocessingml.document, application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-powerpoint, application/vnd.openxmlformats-officedocument.presentationml.presentation, image/*, video/mp4, video/x-m4v, video/webm, video/x-matroska, video/*, .mkv">
               </div>
             </div>
-
+            
+            {% if configuracao.maxMB_filesize %}
+              <script>
+                document.getElementById("arquivo").onchange = function() {
+                  if(this.files && this.files[0] && this.files[0].size > {{configuracao.maxMB_filesize}}*1048576){
+                    alert("Tamanho do arquivo maior que o permitido de {{configuracao.maxMB_filesize}}Mb");
+                    this.value = "";
+                  }
+                }
+              </script>
+            {% endif %}
+            
             <div class="form-group row">
               <label for="min-date" class="col-sm-4 control-label">Datas</label>
               <div class="col-sm-8">
@@ -108,15 +124,16 @@
                 </div>
               </div>
             </div>
-        </form>
-      </div> {% comment %} modal-body {% endcomment %}
+        </div> {% comment %} modal-body {% endcomment %}
 
-      <div class="modal-footer">
-        <div id="warning-footer" style="color: red;"></div>
-        <button type="button" class="btn btn-default mb-1" data-dismiss="modal">Cancel</button>
-        <button type="button" class="btn btn-primary mb-1" id="save-event">Save</button>
-      </div> {% comment %} modal-footer {% endcomment %}
+        <div class="modal-footer">
+          <div id="warning-footer" style="color: red;"></div>
+          <button type="button" class="btn btn-default mb-1" data-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-primary mb-1" id="save-event">Save</button>
+        </div> {% comment %} modal-footer {% endcomment %}
 
-    </div> {% comment %} modal-content {% endcomment %}
-  </div> {% comment %} modal-dialog {% endcomment %}
-</div> {% comment %} event-modal {% endcomment %}
+      </div> {% comment %} modal-content {% endcomment %}
+    </div> {% comment %} modal-dialog {% endcomment %}
+  </div> {% comment %} event-modal {% endcomment %}
+
+</form>
