bloqueia edição para somente bancas do orientador

--- a/professores/templates/professores/bancas_index.html
+++ b/professores/templates/professores/bancas_index.html
@@ -243,6 +243,7 @@
                                 membro2: value.membro2,
                                 membro3: value.membro3,
                                 description: value.description,
+                                editable: value.editable,
                               });
                             }
                             successCallback(eventsList);
